Fix : content unvisible issue
- 개발자도구에서 아예 본문이 불려오지 않길래 확인해봤더니 block content가 아니라 contents 였다.
- 그 외 자잘한 디자인 수정 있었음 (+css)

--- a/02_Rotation/WebApplication/Project/personalProject/static/base.css
+++ b/02_Rotation/WebApplication/Project/personalProject/static/base.css
@@ -20,3 +20,17 @@
     max-width: 500px;
     padding: 1rem 1.5rem;
 }
+
+
+.profile-image {
+    height: 12rem;
+    width: 12rem;
+    border-radius: 20rem;
+    /* 왜곡 없이 남는부분 잘라내는 옵션 */
+    object-fit: cover;
+}
+
+.NNS_B {
+    /* NaNumSquare_B */
+    font-family: "NaNumSquare_B", cursive;
+}
